# standby

./: .gitignore  README.md  docker-compose.yml  start.sh
docs/: 1-产品理念说明书.md  2-PRD文档.md  3-技术架构指南.md  4-Flutter设计方案.md  5-思想融合分析.md  HANDBOOK.md  PRD.md
engines/: Dockerfile.python  README.md  pytest.ini  requirements.txt
engines-rust/: Cargo.toml
engines-rust/anchor_replay/: Cargo.toml
engines-rust/anchor_replay/src/: lib.rs  replay.rs
engines-rust/governance/: Cargo.toml
engines-rust/governance/src/: credit.rs  detection.rs  evaluate.rs  lib.rs
engines-rust/resonance/: Cargo.toml
engines-rust/resonance-service/: Cargo.toml
engines-rust/resonance-service/src/: main.rs
engines-rust/resonance/src/: decay.rs  lib.rs  penalty.rs  resonance.rs
engines-rust/shared/: Cargo.toml
engines-rust/shared/src/: lib.rs  math.rs  types.rs
engines/anchor_engine/: anchor_replay.py  anchor_replay_v2.py  service.py
engines/config/: engines.yaml
engines/context_engine/: service.py
engines/governance_engine/: rule_governance.py  rule_governance_v2.py  service.py
engines/resonance_engine/: incremental_pipeline.py  resonance_calculator.py  resonance_calculator_v2.py  service.py
engines/shared/: db.py  engine_base.py  mongo_compat.py  nats_client.py  pg_compat.py
engines/tests/: conftest.py  test_anchor_engine.py  test_user_engine.py  (+4 more)
scripts/: init-db.sql  seed.sql  seed_500.py  seed_anchors.py  seed_anchors_batch2.py  seed_direct.py  seed_more.sql  seed_reactions.sql  seed_relationships.sql  seed_users.sql
src/gateway/: Cargo.toml  Dockerfile  build.rs
src/gateway/.cargo/: config.toml
src/gateway/src/: auth.rs  config.rs  error.rs  main.rs  proto.rs  state.rs
src/gateway/src/handlers/: anchor.rs  auth.rs  context.rs  governance.rs  mod.rs  reaction.rs  user.rs
src/gateway/src/middleware/: auth_mw.rs  device_mw.rs  mod.rs  rate_limit_mw.rs
standby_app/: README.md  pubspec.yaml
tests/: e2e_test.py
(+61 files in other folders)
