[workspace]
resolver = "2"
members = [
    "shared",
    "resonance",
    "governance",
    "anchor_replay",
    "resonance-service",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
pulp = "0.18"
rayon = "1.10"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
