[package]
name = "standby-resonance-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "resonance-service"
path = "src/main.rs"

[dependencies]
standby-shared = { path = "../shared" }
standby-resonance = { path = "../resonance" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
bytes = "1"
serde.workspace = true
serde_json.workspace = true
tracing = "0.1"
tracing-subscriber = "0.3"
