[package]
name = "standby-gateway"
version = "0.1.0"
edition = "2021"
description = "Standby API Gateway"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "request-id"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# gRPC 客户端 (连接 Python 引擎)
tonic = "0.12"
prost = "0.13"

# NATS 客户端
async-nats = "0.37"

# 认证 & 加密
jsonwebtoken = "9"
ring = "0.17"
argon2 = "0.5"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 配置
config = "0.14"

# 时间
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# 错误处理
thiserror = "1"
anyhow = "1"

# 异步
futures = "0.3"

[build-dependencies]
tonic-build = "0.12"
